# cfdp-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: testsuite.yaml
cfdp-core/: Cargo.toml
cfdp-core/src/: daemon.rs  filestore.rs  lib.rs  pdu.rs  segments.rs  timer.rs  transaction.rs  transport.rs  user.rs  util.rs
cfdp-core/src/pdu/: error.rs  fault_handler.rs  filestore.rs  header.rs  ops.rs  user_ops.rs
cfdp-core/src/transaction/: config.rs  error.rs  recv.rs  send.rs
cfdp-core/tests/: common.rs  common_test.rs  series_f1.rs  series_f2.rs  series_f3.rs
cfdp-core/tests/common/: mod.rs
cfdp-daemon/: Cargo.toml
cfdp-daemon/src/: error.rs  lib.rs  segments.rs  transaction.rs  transport.rs
cfdp-daemon/src/transaction/: error.rs  recv.rs  send.rs
cfdp-daemon/tests/: common_test.rs  series_f1.rs  series_f2.rs  series_f3.rs
cfdp-daemon/tests/common/: mod.rs
data/: medium.txt  small.txt
