[package]
name = "cfdp-core"
version = "0.1.0"
edition = "2021"

[features]
uart = ["serialport"]
ipc = ["interprocess"]


[dependencies]
byteorder = "~1.4"
camino = {version = "~1.1", features=["serde1"]}
crossbeam-channel = "~0.5"
interprocess = { version = "~1.2", optional = true}
itertools = "~0.10"
log = '~0.4'
num-derive = "0.3"
num-traits = "0.2"
pathdiff = "~0.2"
serialport = { version = "~4.2", optional = true }
tempfile = "~3.3"
thiserror = "~1.0"

[dev-dependencies]
rstest = "0.15.0"
signal-hook = "~0.3"
