[package]
 name    = "cfdp-core"
 version = "0.1.0"
 edition = "2021"

[features]


[dependencies]
 byteorder  = "~1.5"
 camino     = { version = "~1.1" }
 log        = '~0.4'
 num-derive = "~0.4"
 num-traits = "0.2"
 pathdiff   = "~0.2"
 tempfile   = "~3"
 thiserror  = "~2.0"
 tokio      = { version = "1.28.2", default-features = false, features = [ "sync" ] }

[dev-dependencies]
 rstest       = "0.25.0"
 rstest_reuse = "0.7.0"
