[package]
 name    = "cfdp-daemon"
 version = "0.1.0"
 edition = "2021"

 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 async-trait = "0.1"
 cfdp-core   = { path = "../cfdp-core" }
 camino      = { version = "~1.2" }
 log         = '~0.4'
 tokio       = { version = "1.28.2", features = [ "time", "net", "rt-multi-thread", "macros" ] }
 thiserror   = "~2.0"


[dev-dependencies]
 itertools = "~0.14"
 rstest    = "0.26.1"
 tempfile  = "~3"
 test-log  = "0.2.16"
 tokio     = { version = "1.28.2", features = [ "parking_lot", "macros" ] }
